<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="157dp"
    app:cardElevation="50dp"
    android:backgroundTint="@color/light_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/drawer_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/logo"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/drawer_logo"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/dark_blue_1"
            android:textSize="35sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/drawer_logo"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/horizontalLine"
            android:text="@string/hi"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/nav_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/horizontalLine"
            android:layout_toEndOf="@+id/hi"
            android:text="@string/userName"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/nav_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hi"
            android:layout_marginStart="10dp"
            android:letterSpacing="0.1"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="12sp" />

    <Button
        android:id="@+id/signUpAndLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupandlogin"
        android:layout_below="@+id/horizontalLine"
        android:layout_marginTop="17dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/light_red"
        />
        </RelativeLayout>

</com.google.android.material.card.MaterialCardView>