<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:text-overflow="http://schemas.android.com/tools"
    app:cardCornerRadius="5dp"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/SellerProdLayutImg"
            android:layout_width="137dp"
            android:layout_height="145dp"
            android:contentDescription="@string/todosellerprodlayot"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/SellerProdLayutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/SellerProdLayutImg"
            android:padding="3dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/SellerProdLayutPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/SellerProdLayutImg"
            android:layout_below="@+id/SellerProdLayutTitle"
            android:padding="3dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>